--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -24,7 +24,7 @@ build:
 # The build-time dependencies of the app.
 dependencies:
   php:
-    "drush/drush": "^6.1"
+    "drush/drush": "^8.0"
 
 # The relationships of the application with services or other applications.
 #
@@ -32,10 +32,8 @@ dependencies:
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
-  database: 'mysqldb:mysql'
+  database: 'db:mysql'
   cache: "memcached:memcached"
-#    solr: 'solrsearch:solr'
-#    redis: 'rediscache:redis'
 
 # The configuration of app when it is exposed to the web.
 web:
@@ -94,28 +92,36 @@ disk: 2048
 
 # The mounts that will be performed when the package is deployed.
 mounts:
-  '/public/sites/default/files': 'shared:files/files'
-  '/tmp': 'shared:files/tmp'
-  '/private': 'shared:files/private'
-  '/drush-backups': 'shared:files/drush-backups'
+  '/public/sites/default/files':
+    source: local
+    source_path: 'files'
+  '/tmp':
+    source: local
+    source_path: 'tmp'
+  '/private':
+    source: local
+    source_path: 'private'
+  '/drush-backups':
+    source: local
+    source_path: 'drush-backups'
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
   build: |
-    cd public/profiles/ding2/themes/ddbasic
+    set -e
+    cd themes/ddbasic
     npm install
     node_modules/.bin/gulp uglify sass
 
   # We run deploy hook after your application has been deployed and started.
   deploy: |
     set -e
-    cd public
-    drush -y updatedb
-    drush -y features-revert-all
-    drush secure-permissions-rebuild
-    drush css-generate
-    drush pm-enable ding_config_import
-    drush cc all
+#    drush -y updatedb
+#    drush -y features-revert-all
+#    drush secure-permissions-rebuild
+#    drush css-generate
+#    drush pm-enable ding_config_import
+#    drush cc all
 
   # The configuration of scheduled execution.
 crons:
