--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -105,7 +105,7 @@ mounts:
 hooks:
   build: |
     set -e
-    cd /themes/ddbasic
+    cd public/profiles/ding2/themes/ddbasic
     npm install
     node_modules/.bin/gulp uglify sass
 
