--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -7,7 +7,7 @@
   type: upstream
   upstream: "app:http"
   cache:
-    enabled: false
+    enabled: true
     # Base the cache on the session cookie. Ignore all other cookies.
     cookies: ['/^SS?ESS/']
 
